dev-05-add-rtems-gpio-adv

--- a/driver/IOCTL/Makefile
+++ b/driver/IOCTL/Makefile
@@ -1,5 +1,8 @@
-obj-m += driver.o
- 
+obj-m += gpio_adv_drv.o
+
+EXTRA_CFLAGS += \
+	     -I$(src)/include \
+	     -DTEST
 KDIR = /lib/modules/$(shell uname -r)/build
  
  
